# modeling-amigurumi

./: README.md
code/: CMakeLists.txt
code/crochet/: Action.cpp  Action.h  Pattern.cpp  Pattern.h  Piece.cpp  Piece.h  Project.cpp  Project.h  Row.cpp  Row.h  Stitch.cpp  Stitch.h
code/graph/: ceressolver.cpp  ceressolver.h  graph.cpp  graph.h  graphcontrol.cpp  graphcontrol.h
code/include/: config.h.in  defs.h  pattern.txt  pikmin-pattern.txt
code/rendering/model/: IcoSphere.cpp  IcoSphere.h  Model.cpp  Model.h
code/run/: test_polyscope.cpp
